samples/_failures_safe/1761730394_f4da9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29df6027.c: In function ‘main’:
./samples/SAFE/__tmp_29df6027.c:149:12: error: expected identifier or ‘(’ at end of input
  149 |     struct TextAnaly
      |            ^~~~~~~~~
./samples/SAFE/__tmp_29df6027.c:149:12: error: expected declaration or statement at end of input
